Add search by owner public key
Add search by owner public key
