# api/docs/swagger.json
@@ -1,19 +1,12 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "API to query blocks and transactions of Alphabill",
+        "title": "Alphabill Blockchain Explorer API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "basePath": "/api/v1",
     "paths": {
         "/address/{pubKey}/bills": {
             "get": {
@@ -50,13 +43,13 @@ const docTemplate = `{
                     "400": {
                         "description": "Error: Missing 'pubKey' variable in the URL",
                         "schema": {
-                            "$ref": "#/definitions/restapi.ErrorResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Error: Bills with specified public key not found",
                         "schema": {
-                            "$ref": "#/definitions/restapi.ErrorResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -94,7 +87,7 @@ const docTemplate = `{
                     "200": {
                         "description": "Block information successfully retrieved",
                         "schema": {
-                            "$ref": "#/definitions/restapi.BlockResponse"
+                            "$ref": "#/definitions/api.BlockResponse"
                         }
                     },
                     "400": {
@@ -161,7 +154,7 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/restapi.BlockInfo"
+                                "$ref": "#/definitions/api.BlockInfo"
                             }
                         }
                     }
@@ -203,7 +196,7 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/restapi.TxInfo"
+                                "$ref": "#/definitions/api.TxInfo"
                             }
                         }
                     },
@@ -259,7 +252,7 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/restapi.TxInfo"
+                                "$ref": "#/definitions/api.TxInfo"
                             }
                         }
                     }
@@ -282,7 +275,7 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.PartitionRoundInfo"
+                                "$ref": "#/definitions/partition.RoundInfo"
                             }
                         }
                     }
@@ -318,7 +311,7 @@ const docTemplate = `{
                     "200": {
                         "description": "Block information successfully retrieved",
                         "schema": {
-                            "$ref": "#/definitions/restapi.SearchResponse"
+                            "$ref": "#/definitions/api.SearchResponse"
                         }
                     },
                     "400": {
@@ -362,7 +355,7 @@ const docTemplate = `{
                     "200": {
                         "description": "Successfully retrieved the transaction information",
                         "schema": {
-                            "$ref": "#/definitions/restapi.TxInfo"
+                            "$ref": "#/definitions/api.TxInfo"
                         }
                     },
                     "400": {
@@ -414,20 +407,20 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/restapi.TxInfo"
+                                "$ref": "#/definitions/api.TxInfo"
                             }
                         }
                     },
                     "400": {
                         "description": "Error: Missing 'unitID' variable in the URL",
                         "schema": {
-                            "$ref": "#/definitions/restapi.ErrorResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Error: Transaction with specified unit ID not found",
+                        "description": "Error: Transactions with specified unit ID not found",
                         "schema": {
-                            "$ref": "#/definitions/restapi.ErrorResponse"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     }
                 }
@@ -435,33 +428,7 @@ const docTemplate = `{
         }
     },
     "definitions": {
-        "domain.Bill": {
-            "type": "object",
-            "properties": {
-                "counter": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "lockStatus": {
-                    "type": "integer"
-                },
-                "networkID": {
-                    "$ref": "#/definitions/types.NetworkID"
-                },
-                "partitionID": {
-                    "type": "integer"
-                },
-                "value": {
-                    "type": "integer"
-                }
-            }
-        },
-        "restapi.BlockInfo": {
+        "api.BlockInfo": {
             "type": "object",
             "properties": {
                 "blockNumber": {
@@ -502,13 +469,13 @@ const docTemplate = `{
                 }
             }
         },
-        "restapi.BlockResponse": {
+        "api.BlockResponse": {
             "type": "object",
             "additionalProperties": {
-                "$ref": "#/definitions/restapi.BlockInfo"
+                "$ref": "#/definitions/api.BlockInfo"
             }
         },
-        "restapi.ErrorResponse": {
+        "api.ErrorResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -516,24 +483,36 @@ const docTemplate = `{
                 }
             }
         },
-        "restapi.SearchResponse": {
+        "api.SearchResponse": {
             "type": "object",
             "properties": {
                 "blocks": {
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/restapi.BlockInfo"
+                        "$ref": "#/definitions/api.BlockInfo"
                     }
                 },
                 "txs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/restapi.TxInfo"
+                        "$ref": "#/definitions/api.TxInfo"
+                    }
+                },
+                "units": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "array",
+                        "items": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
                     }
                 }
             }
         },
-        "restapi.TxInfo": {
+        "api.TxInfo": {
             "type": "object",
             "properties": {
                 "blockNumber": {
@@ -559,7 +538,33 @@ const docTemplate = `{
                 }
             }
         },
-        "service.PartitionRoundInfo": {
+        "domain.Bill": {
+            "type": "object",
+            "properties": {
+                "counter": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "lockStatus": {
+                    "type": "integer"
+                },
+                "networkID": {
+                    "$ref": "#/definitions/types.NetworkID"
+                },
+                "partitionID": {
+                    "type": "integer"
+                },
+                "value": {
+                    "type": "integer"
+                }
+            }
+        },
+        "partition.RoundInfo": {
             "type": "object",
             "properties": {
                 "epochNumber": {
@@ -649,22 +654,4 @@ const docTemplate = `{
             ]
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "",
-	BasePath:         "/api/v1",
-	Schemes:          []string{},
-	Title:            "Alphabill Blockchain Explorer API",
-	Description:      "API to query blocks and transactions of Alphabill",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
