# api/txs.go
@@ -1,10 +1,12 @@
-package restapi
+package api
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
 	"strconv"
 
+	"github.com/alphabill-org/alphabill-explorer-backend/domain"
 	"github.com/alphabill-org/alphabill-explorer-backend/util"
 	"github.com/alphabill-org/alphabill-go-base/types"
 	"github.com/gorilla/mux"
@@ -21,35 +23,29 @@ import (
 // @Failure 404 {string} string "Transaction with the specified hash not found"
 // @Failure 500 {string} string "Failed to load transaction details"
 // @Router /txs/{txHash} [get]
-func (api *RestAPI) getTx(w http.ResponseWriter, r *http.Request) {
+func (c *Controller) getTx(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	txHash, ok := vars[paramTxHash]
 	if !ok {
-		api.rw.WriteMissingParamResponse(w, paramTxHash)
+		c.rw.WriteMissingParamResponse(w, paramTxHash)
 		return
 	}
-	txHashBytes, err := ParseHex[[]byte](txHash, true)
+	txHashBytes, err := util.DecodeHex(txHash)
 	if err != nil {
-		api.rw.WriteInvalidParamResponse(w, paramTxHash)
+		c.rw.WriteInvalidParamResponse(w, paramTxHash)
 		return
 	}
-	txInfo, err := api.Service.GetTxByHash(r.Context(), txHashBytes)
+	txInfo, err := c.StorageService.GetTxByHash(r.Context(), txHashBytes)
 	if err != nil {
-		api.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load tx with txHash %s : %w", txHash, err))
+		if errors.Is(err, domain.ErrNotFound) {
+			c.rw.WriteErrorResponse(w, fmt.Errorf("tx with txHash %s not found", txHash), http.StatusNotFound)
+			return
+		}
+		c.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load tx with txHash %s : %w", txHash, err))
 		return
 	}
 
-	if txInfo == nil {
-		api.rw.WriteErrorResponse(w, fmt.Errorf("tx with txHash %s not found", txHash), http.StatusNotFound)
-		return
-	}
-	api.rw.WriteResponse(w, TxInfo{
-		TxRecordHash: txInfo.TxRecordHash,
-		TxOrderHash:  txInfo.TxOrderHash,
-		BlockNumber:  txInfo.BlockNumber,
-		Transaction:  txInfo.Transaction,
-		PartitionID:  txInfo.PartitionID,
-	})
+	c.rw.WriteResponse(w, txInfoResponse(txInfo))
 }
 
 // @Summary Retrieve transactions, latest first.
@@ -61,16 +57,16 @@ func (api *RestAPI) getTx(w http.ResponseWriter, r *http.Request) {
 // @Param limit query int false "The maximum number of transactions to retrieve, default 20"
 // @Success 200 {array} TxInfo "Successfully retrieved list of transactions"
 // @Router /partitions/{partitionID}/txs [get]
-func (api *RestAPI) getTxs(w http.ResponseWriter, r *http.Request) {
+func (c *Controller) getTxs(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	partitionIDStr, ok := vars[paramPartitionID]
 	if !ok {
-		api.rw.WriteMissingParamResponse(w, paramPartitionID)
+		c.rw.WriteMissingParamResponse(w, paramPartitionID)
 		return
 	}
 	partitionID, err := strconv.ParseUint(partitionIDStr, 10, 64)
 	if err != nil {
-		api.rw.WriteInvalidParamResponse(w, paramPartitionID)
+		c.rw.WriteInvalidParamResponse(w, paramPartitionID)
 		return
 	}
 
@@ -80,30 +76,24 @@ func (api *RestAPI) getTxs(w http.ResponseWriter, r *http.Request) {
 	if limitStr != "" {
 		limit, err = ParseMaxResponseItems(limitStr, 100)
 		if err != nil {
-			api.rw.WriteInvalidParamResponse(w, paramLimit)
+			c.rw.WriteInvalidParamResponse(w, paramLimit)
 			return
 		}
 	}
 
-	txs, previousID, err := api.Service.GetTxsPage(r.Context(), types.PartitionID(partitionID), startID, limit)
+	txs, previousID, err := c.StorageService.GetTxsPage(r.Context(), types.PartitionID(partitionID), startID, limit)
 	if err != nil {
-		api.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with startID %s and limit %d : %w", startID, limit, err))
+		c.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with startID %s and limit %d : %w", startID, limit, err))
 		return
 	}
 
 	var response = []TxInfo{}
 	for _, txInfo := range txs {
-		response = append(response, TxInfo{
-			TxRecordHash: txInfo.TxRecordHash,
-			TxOrderHash:  txInfo.TxOrderHash,
-			BlockNumber:  txInfo.BlockNumber,
-			Transaction:  txInfo.Transaction,
-			PartitionID:  txInfo.PartitionID,
-		})
+		response = append(response, txInfoResponse(txInfo))
 	}
 
 	setLinkHeader(r.URL, w, previousID)
-	api.rw.WriteResponse(w, response)
+	c.rw.WriteResponse(w, response)
 }
 
 // @Summary Retrieve transactions by block number
@@ -117,52 +107,46 @@ func (api *RestAPI) getTxs(w http.ResponseWriter, r *http.Request) {
 // @Failure 400 {string} string "Missing or invalid 'blockNumber' variable in the URL"
 // @Failure 404 {string} string "No transactions found for the specified block number"
 // @Router /partitions/{partitionID}/blocks/{blockNumber}/txs [get]
-func (api *RestAPI) getBlockTxsByBlockNumber(w http.ResponseWriter, r *http.Request) {
+func (c *Controller) getBlockTxsByBlockNumber(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	blockNumberStr, ok := vars[paramBlockNumber]
 	if !ok {
-		api.rw.WriteMissingParamResponse(w, paramBlockNumber)
+		c.rw.WriteMissingParamResponse(w, paramBlockNumber)
 		return
 	}
 	blockNumber, err := strconv.ParseUint(blockNumberStr, 10, 64)
 	if err != nil {
-		api.rw.WriteInvalidParamResponse(w, paramBlockNumber)
+		c.rw.WriteInvalidParamResponse(w, paramBlockNumber)
 		return
 	}
 	partitionIDStr, ok := vars[paramPartitionID]
 	if !ok {
-		api.rw.WriteMissingParamResponse(w, paramPartitionID)
+		c.rw.WriteMissingParamResponse(w, paramPartitionID)
 		return
 	}
 	partitionID, err := strconv.ParseUint(partitionIDStr, 10, 64)
 	if err != nil {
-		api.rw.WriteInvalidParamResponse(w, paramPartitionID)
+		c.rw.WriteInvalidParamResponse(w, paramPartitionID)
 		return
 	}
 
-	txs, err := api.Service.GetTxsByBlockNumber(r.Context(), blockNumber, types.PartitionID(partitionID))
+	txs, err := c.StorageService.GetTxsByBlockNumber(r.Context(), blockNumber, types.PartitionID(partitionID))
 	if err != nil {
-		api.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with blockNumber %d : %w", blockNumber, err))
+		c.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with blockNumber %d : %w", blockNumber, err))
 		return
 	}
 
 	if txs == nil {
-		api.rw.WriteErrorResponse(w, fmt.Errorf("tx with txHash %d not found", blockNumber), http.StatusNotFound)
+		c.rw.WriteErrorResponse(w, fmt.Errorf("txs for block number %d not found", blockNumber), http.StatusNotFound)
 		return
 	}
 
 	var response = []TxInfo{}
 	for _, txInfo := range txs {
-		response = append(response, TxInfo{
-			TxRecordHash: txInfo.TxRecordHash,
-			TxOrderHash:  txInfo.TxOrderHash,
-			BlockNumber:  txInfo.BlockNumber,
-			Transaction:  txInfo.Transaction,
-			PartitionID:  txInfo.PartitionID,
-		})
+		response = append(response, txInfoResponse(txInfo))
 	}
 
-	api.rw.WriteResponse(w, response)
+	c.rw.WriteResponse(w, response)
 }
 
 // @Summary Retrieve transactions by unit ID
@@ -173,42 +157,46 @@ func (api *RestAPI) getBlockTxsByBlockNumber(w http.ResponseWriter, r *http.Requ
 // @Param unitID path string true "Unit ID (0xHEX encoded)"
 // @Success 200 {array} TxInfo "List of transactions"
 // @Failure 400 {object} ErrorResponse "Error: Missing 'unitID' variable in the URL"
-// @Failure 404 {object} ErrorResponse "Error: Transaction with specified unit ID not found"
+// @Failure 404 {object} ErrorResponse "Error: Transactions with specified unit ID not found"
 // @Router /units/{unitID}/txs [get]
-func (api *RestAPI) getTxsByUnitID(w http.ResponseWriter, r *http.Request) {
+func (c *Controller) getTxsByUnitID(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	unitID, ok := vars[paramUnitID]
 	if !ok {
-		api.rw.WriteMissingParamResponse(w, paramUnitID)
+		c.rw.WriteMissingParamResponse(w, paramUnitID)
 		return
 	}
 
 	uid, err := util.FromHex([]byte(unitID))
 	if err != nil {
-		api.rw.WriteInvalidParamResponse(w, paramUnitID)
+		c.rw.WriteInvalidParamResponse(w, paramUnitID)
 		return
 	}
-	txs, err := api.Service.GetTxsByUnitID(r.Context(), uid)
+	txs, err := c.StorageService.GetTxsByUnitID(r.Context(), uid)
 	if err != nil {
-		api.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with unitID %s : %w", unitID, err))
+		c.rw.WriteInternalErrorResponse(w, fmt.Errorf("failed to load txs with unitID %s : %w", unitID, err))
 		return
 	}
 
 	if txs == nil {
-		api.rw.WriteErrorResponse(w, fmt.Errorf("tx with unitID %s not found", unitID), http.StatusNotFound)
+		c.rw.WriteErrorResponse(w, fmt.Errorf("txs with unitID %s not found", unitID), http.StatusNotFound)
 		return
 	}
 
 	var response = []TxInfo{}
 	for _, txInfo := range txs {
-		response = append(response, TxInfo{
-			TxRecordHash: txInfo.TxRecordHash,
-			TxOrderHash:  txInfo.TxOrderHash,
-			BlockNumber:  txInfo.BlockNumber,
-			Transaction:  txInfo.Transaction,
-			PartitionID:  txInfo.PartitionID,
-		})
+		response = append(response, txInfoResponse(txInfo))
 	}
 
-	api.rw.WriteResponse(w, response)
+	c.rw.WriteResponse(w, response)
+}
+
+func txInfoResponse(tx *domain.TxInfo) TxInfo {
+	return TxInfo{
+		TxRecordHash: tx.TxRecordHash,
+		TxOrderHash:  tx.TxOrderHash,
+		BlockNumber:  tx.BlockNumber,
+		Transaction:  tx.Transaction,
+		PartitionID:  tx.PartitionID,
+	}
 }
